@@ -2852,126 +2852,6 @@ argument_list|()
 condition|)
 block|{
 case|case
-name|MSG_CALL_SERVER_STARTUP
-case|:
-comment|// We the MSG_CALL_SERVER_STARTUP on startup but we can also
-comment|// get it when the master is panicking because for instance
-comment|// the HDFS has been yanked out from under it.  Be wary of
-comment|// this message.
-if|if
-condition|(
-name|checkFileSystem
-argument_list|()
-condition|)
-block|{
-name|closeAllRegions
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|hlog
-operator|.
-name|closeAndDelete
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|error
-argument_list|(
-literal|"error closing and deleting HLog"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
-try|try
-block|{
-name|serverInfo
-operator|.
-name|setStartCode
-argument_list|(
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|hlog
-operator|=
-name|setupHLog
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-name|this
-operator|.
-name|abortRequested
-operator|=
-literal|true
-expr_stmt|;
-name|this
-operator|.
-name|stopRequested
-operator|.
-name|set
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-name|e
-operator|=
-name|RemoteExceptionHandler
-operator|.
-name|checkIOException
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-name|LOG
-operator|.
-name|fatal
-argument_list|(
-literal|"error restarting server"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-break|break;
-block|}
-name|reportForDuty
-argument_list|()
-expr_stmt|;
-name|restart
-operator|=
-literal|true
-expr_stmt|;
-block|}
-else|else
-block|{
-name|LOG
-operator|.
-name|fatal
-argument_list|(
-literal|"file system available check failed. "
-operator|+
-literal|"Shutting down server."
-argument_list|)
-expr_stmt|;
-block|}
-break|break;
-case|case
 name|MSG_REGIONSERVER_STOP
 case|:
 name|stopRequested
@@ -4793,8 +4673,6 @@ name|HLog
 name|setupHLog
 parameter_list|()
 throws|throws
-name|RegionServerRunningException
-throws|,
 name|IOException
 block|{
 name|Path
