@@ -1,0 +1,360 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Copyright 2010 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|master
+package|;
+end_package
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HBaseTestingUtility
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HServerAddress
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|MiniHBaseCluster
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|regionserver
+operator|.
+name|HRegionServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|AfterClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|TestMasterWrongRS
+block|{
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|TestMasterWrongRS
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|HBaseTestingUtility
+name|TEST_UTIL
+init|=
+operator|new
+name|HBaseTestingUtility
+argument_list|()
+decl_stmt|;
+annotation|@
+name|BeforeClass
+specifier|public
+specifier|static
+name|void
+name|beforeAllTests
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|TEST_UTIL
+operator|.
+name|startMiniCluster
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|AfterClass
+specifier|public
+specifier|static
+name|void
+name|afterAllTests
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|TEST_UTIL
+operator|.
+name|shutdownMiniCluster
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**    * Test when region servers start reporting with the wrong address    * or start code. Currently the decision is to shut them down.    * See HBASE-2613    * @throws Exception    */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testRsReportsWrongServerName
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MiniHBaseCluster
+name|cluster
+init|=
+name|TEST_UTIL
+operator|.
+name|getHBaseCluster
+argument_list|()
+decl_stmt|;
+name|HRegionServer
+name|firstServer
+init|=
+name|cluster
+operator|.
+name|getRegionServer
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|HRegionServer
+name|secondServer
+init|=
+name|cluster
+operator|.
+name|getRegionServer
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|firstServer
+operator|.
+name|getHServerInfo
+argument_list|()
+operator|.
+name|setStartCode
+argument_list|(
+literal|12345
+argument_list|)
+expr_stmt|;
+comment|// Sleep while the region server pings back
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|firstServer
+operator|.
+name|isOnline
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|cluster
+operator|.
+name|getLiveRegionServerThreads
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|secondServer
+operator|.
+name|getHServerInfo
+argument_list|()
+operator|.
+name|setServerAddress
+argument_list|(
+operator|new
+name|HServerAddress
+argument_list|(
+literal|"0.0.0.0"
+argument_list|,
+literal|60010
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|secondServer
+operator|.
+name|isOnline
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|cluster
+operator|.
+name|getLiveRegionServerThreads
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
